Updated builder test cases

--- a/src/lettercraze/controller/builder/controllerBuilder_index.html
+++ b/src/lettercraze/controller/builder/controllerBuilder_index.html
@@ -2,6 +2,6 @@
     <body>
         This is the builder's controller package.
         <P> 
-        This package contains all the controller classes for both the builder.
+        This package contains all the controller classes for the builder.
     </body>
 </html>
